# template-fragments-rs

./: Cargo.toml  Readme.md  x.py
.github/workflows/: release.yml  test.yml
examples/: minijinja.rs
examples/templates/: index.html
specs/: generate_tests.py
src/: error.rs  lib.rs
src/test/: details.rs  errors.rs  examples.rs  generated.rs  internals.rs  mod.rs
tests/: example.toml
